fix slideshow pause button position on mobile

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -484,6 +484,10 @@ div[role="main"] .widget {
 			&.pause {
 				background: image('/images/pause.png') @color-swatch1 center no-repeat;	
 			}
+			@media @mobile {
+				left: 50%;
+				margin-left: -34px;
+			}
 		}
 	}
 	.slideshow-widget-controls {
